--- a/LioTech/Windows/WindowLogin.xaml
+++ b/LioTech/Windows/WindowLogin.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:LioTech.Windows"
         mc:Ignorable="d" Background="#FFF1F2F3" AllowsTransparency="True"
         WindowStartupLocation="CenterScreen" WindowStyle="None"
-        Height="355" Width="344" ResizeMode="NoResize">
+        Height="355" Width="344" ResizeMode="NoResize" Loaded="Window_Loaded">
 
     <Window.Resources>
         <!-- Login window password box style -->
