--- a/LioTech/Windows/WindowDeliveries.xaml
+++ b/LioTech/Windows/WindowDeliveries.xaml
@@ -17,6 +17,9 @@
 
         <!-- Close and minimise buttons -->
         <Grid Grid.Row="0" Background="Transparent" MouseDown="DragMovement">
+            <TextBlock Text="Таблица: Поставки" Foreground="#FF919193" FontFamily="Montserrat"
+                           FontWeight="Bold" FontSize="14" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+            
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
                 <Image Name="MinBtn" Height="13" Width="13" Margin="5 5 5 5"
                        MouseLeftButtonDown="MinBtn_MouseDown"
@@ -43,7 +46,7 @@
 
             <!-- DataGrid -->
             <DataGrid Name="DeliveriesBindingSource" VerticalAlignment="Top" Margin="0 1 0 0"
-                      Height="375"/>
+                      Height="375" />
         </Grid>
 
         <Grid Grid.Row="2" Background="Transparent">
