--- a/LioTech/Windows/WindowTable.xaml
+++ b/LioTech/Windows/WindowTable.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="LioTech.Windows.WindowDeliveries"
+﻿<Window x:Class="LioTech.Windows.WindowTable"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -17,7 +17,7 @@
 
         <!-- Close and minimise buttons -->
         <Grid Grid.Row="0" Background="Transparent" MouseDown="DragMovement">
-            <TextBlock Text="Таблица: Поставки" Foreground="#FF919193" FontFamily="Montserrat"
+            <TextBlock Name="windowHeader" Foreground="#FF919193" FontFamily="Montserrat"
                            FontWeight="Bold" FontSize="14" HorizontalAlignment="Center" VerticalAlignment="Center"/>
             
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
@@ -45,15 +45,15 @@
             <Border BorderBrush="#8cb349" BorderThickness="0 1 0 0"/>
 
             <!-- DataGrid -->
-            <DataGrid Name="DeliveriesBindingSource" VerticalAlignment="Top" Margin="0 1 0 0"
-                      Height="375" />
+            <DataGrid Name="mainBindingSource" VerticalAlignment="Top" Margin="0 1 0 0"
+                      Height="375" IsReadOnly="True"/>
         </Grid>
 
         <Grid Grid.Row="2" Background="Transparent">
 
             <!-- Add button -->
-            <Button Name="AddBtn" Grid.Row="2" HorizontalAlignment="Left"
-                    Margin="25 0 0 0" Style="{StaticResource TransparentBtn_default}">
+            <Button Name="AddBtn" Grid.Row="2" HorizontalAlignment="Left" Click="AddBtn_Click"
+                    Margin="25 0 0 0" Style="{StaticResource TransparentBtn_default}" Visibility="Hidden">
                 <Button.Template>
                     <ControlTemplate TargetType="{x:Type Button}">
                         <Border Height="28" Width="124" CornerRadius="1"
@@ -88,8 +88,8 @@
             </Button>
 
             <!-- Change button -->
-            <Button Name="ChangeBtn" Grid.Row="2" HorizontalAlignment="Left"
-                    Margin="185 0 0 0" Style="{StaticResource TransparentBtn_default}">
+            <Button Name="ChangeBtn" Grid.Row="2" HorizontalAlignment="Left" Visibility="Hidden"
+                    Margin="185 0 0 0" Style="{StaticResource TransparentBtn_default}" Click="ChangeBtn_Click">
                 <Button.Template>
                     <ControlTemplate TargetType="{x:Type Button}">
                         <Border Height="28" Width="124" CornerRadius="1"
@@ -104,7 +104,7 @@
                                     </Style.Triggers>
                                 </Style>
                             </Border.Style>
-                            <TextBlock Text="Войти"
+                            <TextBlock Text="Изменить"
                                        HorizontalAlignment="Center" Margin="0 2 0 0">
                                 <TextBlock.Style>
                                     <Style TargetType="{x:Type TextBlock}">
@@ -124,8 +124,8 @@
             </Button>
 
             <!-- Delete button -->
-            <Button Name="DeleteBtn" Grid.Row="2" HorizontalAlignment="Right"
-                    Margin="0 0 185 0" Style="{StaticResource TransparentBtn_default}">
+            <Button Name="DeleteBtn" Grid.Row="2" HorizontalAlignment="Right" Visibility="Hidden"
+                    Margin="0 0 185 0" Style="{StaticResource TransparentBtn_default}" Click="DeleteBtn_Click">
                 <Button.Template>
                     <ControlTemplate TargetType="{x:Type Button}">
                         <Border Height="28" Width="124" CornerRadius="1"
@@ -160,7 +160,7 @@
             </Button>
 
             <Button Name="BackBtn" Grid.Row="2" HorizontalAlignment="Right"
-                    Margin="0 0 25 0" Style="{StaticResource TransparentBtn_default}">
+                    Margin="0 0 25 0" Style="{StaticResource TransparentBtn_default}" Click="BackBtn_Click">
                 <Button.Template>
                     <ControlTemplate TargetType="{x:Type Button}">
                         <Border Height="28" Width="124" CornerRadius="1"
@@ -175,7 +175,7 @@
                                     </Style.Triggers>
                                 </Style>
                             </Border.Style>
-                            <TextBlock Text="Войти"
+                            <TextBlock Text="Назад"
                                        HorizontalAlignment="Center" Margin="0 2 0 0">
                                 <TextBlock.Style>
                                     <Style TargetType="{x:Type TextBlock}">
